--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,8 @@ jobs:
         uses: actions/checkout@main
 
       - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action@master
+        uses: actions/checkout@v3
         env:
           API_KEY: ${{ secrets.API_KEY }}
           MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
           APP_ID: ${{ secrets.APP_ID }}
-          BRANCH: main
-          BUILD_SCRIPT: yarn && yarn run build
