--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
           APP_ID: ${{ secrets.APP_ID }}
         with:
           branch: gh-pages
-          folder: /
+          folder: build
