--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
+          npm build
         env:
           API_KEY: ${{ secrets.API_KEY }}
           MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
@@ -24,4 +25,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: .
+          folder: build
