--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Setup github user
+        uses: fregante/setup-git-user@v2
+
       - name: Install and Build
         run: |
           npm install
