--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,11 @@ jobs:
     steps:
       - name: Checkout & Setup github user
         uses: actions/checkout@v3
-        uses: fregante/setup-git-user@v2
+
+      - name: Setup github user
+        run: |
+          git config user.email "semillerog12023@gmail.com"
+          git config user.name "Semillero2023"
 
       - name: Install and Build
         run: |
