--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,11 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout & Setup github user
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Setup github user
-        run: |
-          git config --global user.email "semillerog12023@gmail.com"
-          git config --global user.name "Semillero2023"
+        uses: fregante/setup-git-user@v2
 
       - name: Install and Build
         run: |
