--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup github user
-        uses: fregante/setup-git-user@v2
+      - name: Setup URL
+        run: git remote set-url origin git@github.com:Semillero2023/Backend-Banco-Errores.git
 
       - name: Install and Build
         run: |
