--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "back-banco",
   "version": "0.1.0",
   "homepage": "https://semillero2023.github.io/Backend-Banco-Errores",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
