--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      
+      - name: Github User
+        uses: fregante/setup-git-user@v2
 
       - name: Setup URL
         run: git remote set-url origin git@github.com:Semillero2023/Backend-Banco-Errores.git
