--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,26 +9,20 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout 🛎️
         uses: actions/checkout@v3
-      
-      - name: Github User
-        uses: fregante/setup-git-user@v2
 
-      - name: Setup URL
-        run: git remote set-url origin https://github.com/Semillero2023/Backend-Banco-Errores.git
-
-      - name: Install and Build
+      - name: Install and Build 🔧
         run: |
-          npm install
-          npm run deploy
+          npm ci
+          npm run build
         env:
           API_KEY: ${{ secrets.API_KEY }}
           MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
           APP_ID: ${{ secrets.APP_ID }}
 
-      # - name: Deploy
-      #   uses: JamesIves/github-pages-deploy-action@v4
-      #   with:
-      #     branch: gh-pages
-      #     folder: build
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages
+          folder: build
