--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
+          npm install
           npm ci
           npm run build
         env:
